--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@ body{
     margin:0;
     font-family: Arial, Helvetica, sans-serif;
     font-family:'NHaasGroteskDSPro-65MD'!important;
-    
-    
+      
+}
+#carousel{
+    max-height: 500px;
 }
